--- a/workspace/css/style.css
+++ b/workspace/css/style.css
@@ -8,6 +8,9 @@
 
 :root {
   --color-fondo-menu: #fff159;
+  --color-fondo-body: #EBEBEB;
+  --color-texto: #333333;
+  --color-texto-enlace: #447CCF;
 }
 
 * {
@@ -19,12 +22,14 @@
 html {
   font-size: 62.5%;
   font-family: "Open Sans", sans-serif;
+  color: var(--color-texto)
 }
 
 body {
+  min-width: 320px;
   height: 100vh;
   display: grid;
-  grid-template: repeat(12, 1fr) / repeat(12, 1fr);
+  grid-template: repeat(12, auto) / repeat(12, 1fr);
   background: lightgray;
 }
 
@@ -38,13 +43,6 @@ body {
 .principal {
   grid-row: 2 / 12;
   grid-column: 1 / 13;
-  background-color: lightcoral;
-}
-
-.pie-pagina {
-  grid-row: 12 / 13;
-  grid-column: 1 / 13;
-  background-color: lightgreen;
 }
 
 .cabecera .logo-imagen{
@@ -83,4 +81,96 @@ body {
     width: 160px;
     border: 0;
     color: #333;
+}
+
+.slider-principal{
+  width: 100%;
+  height: 160px;
+}
+
+.slider-principal img{
+  width: 100%;
+  height: 160px;
+}
+
+.principal .productos{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 1.8rem;
+  background-color: white;
+  border-radius: 7px;
+  width: 95%;
+  margin-bottom: 2rem;
+}
+
+.principal .productos h2{
+  padding: 5px;
+}
+
+.principal .productos .ver-todas-ofertas {
+  height: 40px;
+  font-size: 1.4rem;
+  border-top: 1px solid var(--color-fondo-body);
+}
+
+.principal .productos .ver-todas-ofertas ul{
+  padding: 10px;
+}
+
+.principal .productos .ver-todas-ofertas ul li{
+  list-style: none;
+}
+
+.principal .productos .ver-todas-ofertas ul li:nth-child(1){
+  float:left;
+}
+
+.principal .productos .ver-todas-ofertas ul li:nth-child(2){
+  float:right;
+}
+
+.principal .productos .ver-todas-ofertas ul li a{
+  text-decoration: none;
+  color: var(--color-texto-enlace);
+}
+
+.principal .productos .producto{
+  display: grid;
+  grid-template:  1fr / 1fr auto 1fr;
+  padding: 10px;
+  height: 120px;
+  border-top: 1px solid var(--color-fondo-body);
+}
+
+.principal .productos .producto h4{
+  font-size: 1.1rem;
+  padding-top: 1.5rem;
+  width: 100%;
+}
+
+.principal .productos .producto .descripcion-oferta-producto{
+  grid-template: 2/3;
+}
+
+.principal .productos .producto img{
+  width: 104px;
+  height: 104px;
+}
+
+.principal .productos .producto .precio-oferta{
+  display: flex;
+  font-size: 2rem;
+  padding-top: .5rem;
+  padding-bottom: .4rem;
+}
+
+.principal .productos .producto .descuento-oferta{
+  font-size: 1rem;
+  padding-left: 5px;
+  color: green;
+}
+
+.principal .productos .producto .precio-envio-oferta{
+  color: green;
+  font-weight: bold;
 }
