--- a/workspace/css/styles.css
+++ b/workspace/css/styles.css
@@ -13,10 +13,11 @@
 }
 
 :root {
-  --fondo-gris: #F5F5F5;
-  --fondo-menu-principal: #F9DE22;
+  --fondo-gris: #f5f5f5;
+  --fondo-menu-principal: #f9de22;
   --color-texto-negro: #333333;
   --color-texto-negro-banner: #181502;
+  --color-grandient-slideshow: #f69d3c, #3f87a6;
 }
 
 html {
@@ -43,18 +44,18 @@ html {
 }
 
 .body .contenedor-menu-principal .banner-texto-cabecera {
-  padding: .5rem;
+  padding: 0.5rem;
   display: flex;
   justify-content: space-around;
   color: var(--color-texto-negro-banner);
 }
 
-.body .contenedor-menu-principal .banner-texto-cabecera span{
-  padding-top: .3rem;
+.body .contenedor-menu-principal .banner-texto-cabecera span {
+  padding-top: 0.3rem;
 }
 
 main {
-  padding-top: 11rem;
+  padding-top: 10rem;
   background-color: var(--fondo-gris);
 }
 
@@ -80,4 +81,58 @@ main {
 
 .body .contenedor-menu-principal .caja-buscar input:focus {
   outline: none;
+}
+
+.body .slideshow-inicio {
+  padding-top: 1rem;
+  height: 200px;
+  background: linear-gradient(var(--fondo-menu-principal), var(--fondo-gris));
+  display: flex;
+  justify-content: center;
+}
+
+.body .slideshow-inicio img {
+  width: 90%;
+  height: 160px;
+  border-radius: 8px;
+}
+
+.body .lista-menu-categorias{
+  padding-bottom: 2rem;
+  list-style: none;
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+
+
+.body .lista-menu-categorias li{
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  max-width: 65px;
+  text-align: center;
+}
+
+.body .lista-menu-categorias .circulo-blanco {
+  width: 65px;
+  height: 65px;
+  margin-bottom: 1rem;
+  border-radius: 50px;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #8c8c8c;
+  box-shadow: 5px 11px 12px -2px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 5px 11px 12px -2px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 5px 11px 12px -2px rgba(0, 0, 0, 0.1);
+}
+
+.body .lista-menu-categorias .circulo-blanco img {
+  width: 30px;
+  height: 30px;
 }
