--- a/workspace/css/styles.css
+++ b/workspace/css/styles.css
@@ -35,6 +35,7 @@ html {
   background-color: var(--fondo-menu-principal);
 }
 
+/* MENÚ PRINCIPAL */
 .body .contenedor-menu-principal .menu-principal {
   display: flex;
   justify-content: space-around;
@@ -52,11 +53,6 @@ html {
 
 .body .contenedor-menu-principal .banner-texto-cabecera span {
   padding-top: 0.3rem;
-}
-
-main {
-  padding-top: 10rem;
-  background-color: var(--fondo-gris);
 }
 
 .caja {
@@ -83,6 +79,13 @@ main {
   outline: none;
 }
 
+/* FIN DEL MENÚ PRINCIPAL */
+
+main {
+  padding-top: 10rem;
+  background-color: var(--fondo-gris);
+}
+
 .body .slideshow-inicio {
   padding-top: 1rem;
   height: 200px;
@@ -97,7 +100,7 @@ main {
   border-radius: 8px;
 }
 
-.body .lista-menu-categorias{
+.body .lista-menu-categorias {
   padding-bottom: 2rem;
   list-style: none;
   font-size: 1.3rem;
@@ -106,9 +109,7 @@ main {
   justify-content: space-evenly;
 }
 
-
-
-.body .lista-menu-categorias li{
+.body .lista-menu-categorias li {
   display: flex;
   flex-direction: column;
   justify-items: center;
